; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/crt/extr___getmainargs.c_ok_argsA_imp.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/crt/extr___getmainargs.c_ok_argsA_imp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [45 x i8] c"Wrong value for argc, expected: %d, got: %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"test.exe\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ok_argsA_imp(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8**, align 8
  %13 = alloca i8**, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  %14 = load i8*, i8** %8, align 8
  %15 = icmp eq i8* %14, null
  br i1 %15, label %16, label %21

16:                                               ; preds = %4
  %17 = load i8*, i8** %7, align 8
  %18 = icmp eq i8* %17, null
  %19 = zext i1 %18 to i64
  %20 = select i1 %18, i32 2, i32 3
  br label %22

21:                                               ; preds = %4
  br label %22

22:                                               ; preds = %21, %16
  %23 = phi i32 [ %20, %16 ], [ 4, %21 ]
  store i32 %23, i32* %11, align 4
  %24 = call i32** (...) @__p___argv()
  store i32* null, i32** %24, align 8
  %25 = load i8*, i8** %5, align 8
  %26 = call i8** (...) @__p__acmdln()
  store i8* %25, i8** %26, align 8
  %27 = call i32 @__getmainargs(i32* %9, i8*** %12, i8*** %13, i32 0, i32* %10)
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* %11, align 4
  %30 = icmp eq i32 %28, %29
  %31 = zext i1 %30 to i32
  %32 = load i32, i32* %11, align 4
  %33 = load i32, i32* %9, align 4
  %34 = call i32 @winetest_ok(i32 %31, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i32 %32, i32 %33)
  %35 = load i32, i32* %9, align 4
  %36 = load i32, i32* %11, align 4
  %37 = icmp ne i32 %35, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %22
  br label %66

39:                                               ; preds = %22
  %40 = load i8**, i8*** %12, align 8
  %41 = getelementptr inbounds i8*, i8** %40, i64 0
  %42 = load i8*, i8** %41, align 8
  %43 = call i32 @winetest_ok_str(i8* %42, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %44 = load i8**, i8*** %12, align 8
  %45 = getelementptr inbounds i8*, i8** %44, i64 1
  %46 = load i8*, i8** %45, align 8
  %47 = load i8*, i8** %6, align 8
  %48 = call i32 @winetest_ok_str(i8* %46, i8* %47)
  %49 = load i32, i32* %11, align 4
  %50 = icmp sgt i32 %49, 2
  br i1 %50, label %51, label %66

51:                                               ; preds = %39
  %52 = load i8**, i8*** %12, align 8
  %53 = getelementptr inbounds i8*, i8** %52, i64 2
  %54 = load i8*, i8** %53, align 8
  %55 = load i8*, i8** %7, align 8
  %56 = call i32 @winetest_ok_str(i8* %54, i8* %55)
  %57 = load i32, i32* %11, align 4
  %58 = icmp sgt i32 %57, 3
  br i1 %58, label %59, label %65

59:                                               ; preds = %51
  %60 = load i8**, i8*** %12, align 8
  %61 = getelementptr inbounds i8*, i8** %60, i64 3
  %62 = load i8*, i8** %61, align 8
  %63 = load i8*, i8** %8, align 8
  %64 = call i32 @winetest_ok_str(i8* %62, i8* %63)
  br label %65

65:                                               ; preds = %59, %51
  br label %66

66:                                               ; preds = %38, %65, %39
  ret void
}

declare dso_local i32** @__p___argv(...) #1

declare dso_local i8** @__p__acmdln(...) #1

declare dso_local i32 @__getmainargs(i32*, i8***, i8***, i32, i32*) #1

declare dso_local i32 @winetest_ok(i32, i8*, i32, i32) #1

declare dso_local i32 @winetest_ok_str(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
